TVO inspection page + contact button

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -2,8 +2,8 @@
 MASTERPLAN DIGITAAL TOETSEN
 --------------------------------------------------------------------------------------------------------
 Homepage
--- [X] Data toetsen doorgeven iets vroeger zetten 
--- [X] Onderaan pagina meer enters plaatsen zodat je bij Tips&tricks niet naar boven wordt geduwd 
+-- [X] Data toetsen doorgeven iets vroeger zetten
+-- [X] Onderaan pagina meer enters plaatsen zodat je bij Tips&tricks niet naar boven wordt geduwd
 -- Tab Instructions:
 ---- [X] tekstvakken weghalen
 ---- [X] Design aanpassen, misschien toch buttons
@@ -287,9 +287,8 @@ Inzage:
                         <td style="width: 56.2347%;">
                             <span style="font-size: 11pt;">
                                 <p>There are roughly two ways to do the inspection: inspection with support or without support. If you want to do an inspection with support you should notify your programme coordinator at least 7 weeks prior to the inspection date (for more info, see the dates on the 'About'-page underneath "Applying for TestVision")</p>
-                                <p><strong>The advantage of inspection with support</strong> is that it increases the possibility of reusing test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. Printing/downloading the review is an exception but can be difficult in large courses with +200 students.</p>
-                                <!------- Ik snap de laatste zin hierboven niet helemaal ---->
-                                <p><strong>The advantage of inspection without support</strong> is that you can email us and decide to do the inspection at your own time and place. We will set up the inspection in Testvision and send you the login instructions for students.</p>
+                                <p><strong>The advantage of an inspection with support</strong> is that it increases the possibility of reusing test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. If you decide to print the students' results you can control this more easily, but this can be difficult in large courses with more than 200 students.</p>
+                                <p><strong>The advantage of an inspection without support</strong> is that you can email us and decide to do the inspection at your own time and place. We will set up the inspection in TestVision and send you the login instructions for students.</p>
                             </span>
                         </td>
                         <td style="width: 4.47733%;">
