--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
@@ -17,6 +17,7 @@ https://canvas.uva.nl/courses/8175/pages/inspection
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
                 <a class="btn Button" style="margin: 5px; background-color:#E5E5E5"><span style="color: #08a8a2;"><i class="icon-student-view"></i><strong>&nbsp;Inspection</strong></span></a>
                 <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" data-api-returntype="Page">&nbsp;<i class="icon-collection">&nbsp;</i>Extensive instructions</a>
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
             </div>
         </div>
     </div>
@@ -38,10 +39,9 @@ https://canvas.uva.nl/courses/8175/pages/inspection
 
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>FAQ Teachers</em>  <i class="icon-document"></i></strong></span></p></h3>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T1">What's the difference between an inspection with or without technical support?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T2">How do I book an inspection <b>with</b> technical support?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T3">What deadlines should I pay attention to when booking an inspection <b>with</b> technical support?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T31">I missed the deadline for booking an inspection with technical support. What now?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T4">How do I book an inspection <b>without</b> technical support?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T2">How do I book an inspection with technical support?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T3">I missed the deadline for booking an inspection with technical support. What now?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T4">How do I book an inspection without technical support?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T5">How do students log in on TestVision to do the inspection?</a></span></p>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T6">I would like to do the inspection offline. How do I print a test for an inspection?</a></span></p>
             <br>
@@ -62,9 +62,11 @@ https://canvas.uva.nl/courses/8175/pages/inspection
   <p>&nbsp;</p>
   <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
       <h4 style="text-align: center; margin-bottom: 35px;"><strong>What's the difference between an inspection with or without technical support?</strong></h4>
-      <p style="text-align: center;">There are roughly two ways to do the inspection: you can have an inspection with technical support at location or without support. The disadvantage of an inspection without technical support is that it becomes more difficult to reuse test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. Printing/downloading the inspection is an exception but can be difficult in large courses with more than 200 students.
-      <br><br>
-    In the picture below, all options for booking an inspection are shown: <br><br></p>
+      <p style="text-align: center;">There are roughly two ways to do the inspection: you can have an inspection with technical support at location or without support.
+          <br><br><b>The advantage of an inspection <u>with</u> technical support</b> is that it increases the possibility of reusing test questions. Without support, students can easily take a picture, screenshot or copy the test questions via laptop or phone. If you decide to print the students' results you can control this more easily, but this can be difficult in large courses with more than 200 students.
+          <br><br><b>The advantage of an inspection <u>without</u> technical support</b> is that you can <a href="mailto:icto-csw@uva.nl">email ICTO</a> and decide to do the inspection at your own time and place. We will set up the inspection in TestVision and send you the login instructions for students.
+          <br><br>
+          In the picture below, all options for booking an inspection are shown: <br><br></p>
       <p style="text-align:center;"><img src="https://canvas.uva.nl/courses/8175/files/7274551/preview" width="85%" alt="inspection.png" />
       <br><br><i class="icon-question"></i> <a href="#FAQ_T6">How do I print a test for an inspection?</a>
       <br><i class="icon-question"></i> <a href="#FAQ_T5">How do students log in on TestVision to do the inspection?</a></p>
@@ -79,8 +81,10 @@ https://canvas.uva.nl/courses/8175/pages/inspection
   <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
       <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do I book an inspection <u>with</u> technical support?</strong></h4>
       <p style="text-align: center;">If you book an inspection with technical support, a location with UvA laptops or desktops will be provided. Additionally Assistant Floor Managers will be present. They are responsible for preparing and technically supporting the inspection for you.
-        <br><br>If you'd like to do an inspection with support, you need to notify your programme coordinator way in advance. He or she will then also notify ICTO, after which we'll book the technical support for the inspection.
-        <br><br><i class="icon-question"></i> <a href="#FAQ_T3">What deadlines should I pay attention to when booking an inspection with technical support?</a>
+        <br><br>If you'd like to do an inspection with support, you need to notify your programme coordinator way in advance (at least 7 weeks prior to the inspection date). He or she will then also notify ICTO, after which we'll book the technical support for the inspection.
+        The deadlines for booking an inspection with support can be found on this <a href="https://canvas.uva.nl/courses/8175/pages/testvision">page</a> (subsection: Applying for TestVision).
+        <br><br><i class="icon-question"></i> <a href="#FAQ_T3">I missed the deadline for booking an inspection with technical support. What now?</a>
+
       </p>
       <p>&nbsp;</p>
       <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
@@ -88,19 +92,6 @@ https://canvas.uva.nl/courses/8175/pages/inspection
 
   <!-- FAQ teachers 3 -->
   <p><a id="FAQ_T3"></a></p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
-      <h4 style="text-align: center; margin-bottom: 35px;"><strong>What deadlines should I pay attention to when booking an inspection <u>with</u> technical support?</strong></h4>
-      <p style="text-align: center;">
-        The deadlines for booking an inspection with support can be found on this <a href="https://canvas.uva.nl/courses/8175/pages/testvision">page</a> (subsection: Applying for TestVision).
-      </p>
-      <p>&nbsp;</p>
-      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
-  </div>
-
-  <!-- FAQ teachers 3.1 -->
-  <p><a id="FAQ_T31"></a></p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
@@ -136,7 +127,7 @@ https://canvas.uva.nl/courses/8175/pages/inspection
   <p>&nbsp;</p>
   <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
       <h4 style="text-align: center; margin-bottom: 35px;"><strong>How do students log in on TestVision to do the inspection?</strong></h4>
-      <p style="text-align: center;">On <a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students">the following page</a>, an FAQ for students about digital exams can be found. It also states how students can log in on TestVision for the inspection. This page is accessible by students, so you can definitely share it with them.
+      <p style="text-align: center;">On <a href="https://canvas.uva.nl/courses/28129/pages/digital-exams-faq-students">the following page</a>, which you can share with your students, an FAQ for students about digital exams can be found. It also states how students can log in on TestVision for the inspection.
       </p>
       <p>&nbsp;</p>
       <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
@@ -149,7 +140,8 @@ https://canvas.uva.nl/courses/8175/pages/inspection
   <p>&nbsp;</p>
   <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; border-color: #F2F2F2; background-color: #F2F2F2">
       <h4 style="text-align: center; margin-bottom: 35px;"><strong>I would like to do the inspection offline. How do I print a test for an inspection?</strong></h4>
-      <p style="text-align: center;">If you’d like to do a test inspection on paper, there are two options for printing students’ results. This can be done per student or for the entire group. A guide on how to do so, can be found on <a href="https://amsuni.sharepoint.com/:w:/r/sites/FMG_EDU_Soc_Wet/_layouts/15/Doc.aspx?sourcedoc=%7B8D457955-CF52-458C-9D11-3BD59D1A8B37%7D&file=Instructions%20-%20Test%20inspection%20on%20paper%20(TVO).docx&action=default&mobileredirect=true">the following page</a>.
+      <p style="text-align: center;">If you’d like to do a test inspection on paper, there are two options for printing students’ results. This can be done per student or for the entire group. A guide on how to do so, can be found on
+        <a target="_blank" rel="noopener noreferrer" href="https://canvas.uva.nl/courses/8175/files/7279458?wrap=1">the following page</a>.
       </p>
       <p>&nbsp;</p>
       <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
