Voortgang bijgewerkt masterplan DT

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -1,60 +1,64 @@
 <!--
 MASTERPLAN DIGITAAL TOETSEN
 --------------------------------------------------------------------------------------------------------
-Homepage
--- [X] Data toetsen doorgeven iets vroeger zetten
--- [X] Onderaan pagina meer enters plaatsen zodat je bij Tips&tricks niet naar boven wordt geduwd
--- Tab Instructions:
----- [X] tekstvakken weghalen
----- [X] Design aanpassen, misschien toch buttons
----- [_] Je moet iets beter zien wat de bedoeling/proces is
--- [_Robyn mee bezig_] New in TestVision! item toevoegen
--- [_] Inzage -> wanneer moet je dit uiterlijk hebben doorgegeven?
+[_] Homepage
+--- [_] Tab 'About'
+------- [X] Data toetsen doorgeven iets vroeger zetten
+------- [X] Onderaan pagina meer enters plaatsen zodat je bij Tips&tricks niet naar boven wordt geduwd
+------- [X] Inzage -> wanneer moet je dit uiterlijk hebben doorgegeven?
+------- [Robyn mee bezig] New in TestVision! item toevoegen
+--- [X] Tab 'Instructions'
+------- [X] tekstvakken weghalen
+------- [X] Design aanpassen, misschien toch buttons
+------- [X] Je moet iets beter zien wat de bedoeling/proces is
+--- [X] Tab 'About the inspection'
+--- [X] Tab 'Tips & Tricks'
 --------------------------------------------------------------------------------------------------------
-Algemeen:
--- [_] Vragen+Toets & Nakijken is iets anders (want daar moet je iets doen) ten opzichte van de FAQ toetsmoment. Dat willen we inzichtelijker maken.
--- [_] Inzage item moet nog gemaakt worden (iets wat niet echt instructie is maar meer lijkt op een FAQ)
+[X] Algemeen:
+--- [X] Vragen+Toets & Nakijken is iets anders (want daar moet je iets doen) ten opzichte van de FAQ toetsmoment. Dat willen we inzichtelijker maken.
+--- [X] Inzage item moet nog gemaakt worden (iets wat niet echt instructie is maar meer lijkt op een FAQ)
 --------------------------------------------------------------------------------------------------------
-Uitgebreide instructie (oude instructie):
--- [_] Stap 1: Design -> weghalen
--- [_] Stap 4: Moment of examination -> vervangen voor link naar huidige FAQ instructie
--- [_] Stap 6: Inzage -> vervangen voor link naar nieuwe FAQ inzage instructie
+[_] Uitgebreide instructie (oude instructie):
+--- [_] Stap 1: Design -> weghalen
+--- [_] Stap 4: Moment of examination -> vervangen voor link naar huidige FAQ instructie
+--- [_] Stap 6: Inzage -> vervangen voor link naar nieuwe FAQ inzage instructie
 --------------------------------------------------------------------------------------------------------
-Vragen+Toets:
-V
--- [_] I'm working with TestVision for the first time. What does the general process look like? (+ waaronder: [_] how do I access TestVision)
--- [_] How do I edit a question? (+ waaronder: [_] How can I change the name of a question? + [_] PUBLISH changes in de toets)
--- [_] How can I add a question? -> hieruit moet duidelijk worden dat je ICTO mailt!!!!?!?@?@##@: maar ook linkje uitgebreide instructie hoe je het zelf kunt doen in case of emergency
--- [_] What kind of question types can I use?
-T
--- [_] Which basic settings are there in a test? (+ Instructietekst waar kan ik die zien? dit onderdeel moet mooi, bondig en overzichtelijke checklist zijn)
--- [_] What if I'd like to use different settings in a test? -> hieruit moet duidelijk worden dat je ICTO mailt maar ook weer linkje uitgebreide instructie hoe je zelf kunt doen in case of emergency
-CHECK
--- [_] Final check (+ waaronder: tentamen moet op synchroon staan, how to preview the exam)
--- [_] Twijfel? NEEM CONTACT OP!!!##
+[_] Vragen+Toets:
+--- [_] Modifying questions
+------- [_] I'm working with TestVision for the first time. What does the general process look like? (+ waaronder: [_] how do I access TestVision)
+------- [_] How do I edit a question? (+ waaronder: [_] How can I change the name of a question? + [_] PUBLISH changes in de toets)
+------- [_] How can I add a question? -> hieruit moet duidelijk worden dat je ICTO mailt!!!!?!?@?@##@: maar ook linkje uitgebreide instructie hoe je het zelf kunt doen in case of emergency
+------- [_] What kind of question types can I use?
+--- [_] Test settings
+------- [_] Which basic settings are there in a test? (+ Instructietekst waar kan ik die zien? dit onderdeel moet mooi, bondig en overzichtelijke checklist zijn)
+------- [_] What if I'd like to use different settings in a test? -> hieruit moet duidelijk worden dat je ICTO mailt maar ook weer linkje uitgebreide instructie hoe je zelf kunt doen in case of emergency
+--- [_] Final check
+------- [_] Dit kopje toevoegen
+------- [_] Final check (+ waaronder: tentamen moet op synchroon staan, how to preview the exam)
+------- [_] Twijfel? NEEM CONTACT OP!!!##
 --------------------------------------------------------------------------------------------------------
-FAQ moment van toets:
-Is KLAAR :-D
+[X] FAQ moment van toets:
+--- Is KLAAR :-D
 --------------------------------------------------------------------------------------------------------
-Assessment:
--- [_] Beoordelen (mini toevoeging ergens aan de zijkant/"can't see this menu achtig"-> Geen toegang? Beoordelaars doorgeven per mail aan icto-csw@uva.nl)
--- [_] Resultaten/scores zien? -> Valideren
--- [_] Cijfers
----- [_] Het staat al in Final Grades: hoe bereik je die? (add existing assignment + retrieve TVO grades)
----- [_] Optioneel: Hoe maak je een export? (+ Import naar Canvas)
+[_] Assessment:
+--- [_] Beoordelen (mini toevoeging ergens aan de zijkant/"can't see this menu achtig"-> Geen toegang? Beoordelaars doorgeven per mail aan icto-csw@uva.nl)
+--- [_] Resultaten/scores zien? -> Valideren
+--- [_] Cijfers
+------- [_] Het staat al in Final Grades: hoe bereik je die? (add existing assignment + retrieve TVO grades)
+------- [_] Optioneel: Hoe maak je een export? (+ Import naar Canvas)
 --------------------------------------------------------------------------------------------------------
-Inzage:
--- Voor design: kijk naar onze oude instructie, moet ongeveer dezelfde inhoud bevatten maar wel hetzelfde design als de FAQ toetsmoment
--- [_] Plus nieuw item toevoegen: overzicht verschil tussen ingeboekte inzage & geen geboekte Inzage
---- [_] Verschillende levels of inzages met beschrijving voordelen/nadelen, denk aan schema die op de OPC informatie pagina in sharepoint staat
---- Stel je kiest voor eigen inzage:
------ [_] Stuur een mail naar ICTO met wensen datum + tijd (maakt niet uit wanneer en hoe lang, mag je zelf weten)
------ [_] ICTO stel inzage in en zet in het eigen overzicht en 3 dagen voor anvang ontvang je een automatische mail met alle instructies en info
------ [_] Locatie doet er niet toe: je kunt kiezen om het online te doen of om samen ergens met de studenten en eigen laptops te zitten
------ [_] Ook mogelijkheid om alles geprint te doen, zie instructie X hoe
---- Stel je kiest voor geboekte inzage:
------ [_] Moet echt op tijd zijn, hier zijn de deadlines
------ [_] Je kunt gelukkig ook nog printen
+[X] Inzage:
+--- [X] Voor design: kijk naar onze oude instructie, moet ongeveer dezelfde inhoud bevatten maar wel hetzelfde design als de FAQ toetsmoment
+--- [X] Plus nieuw item toevoegen: overzicht verschil tussen ingeboekte inzage & geen geboekte Inzage
+------- [X] Verschillende levels of inzages met beschrijving voordelen/nadelen, denk aan schema die op de OPC informatie pagina in sharepoint staat
+--- [X] Stel je kiest voor eigen inzage:
+------- [X] Stuur een mail naar ICTO met wensen datum + tijd (maakt niet uit wanneer en hoe lang, mag je zelf weten)
+------- [X] ICTO stel inzage in en zet in het eigen overzicht en 3 dagen voor anvang ontvang je een automatische mail met alle instructies en info
+------- [X] Locatie doet er niet toe: je kunt kiezen om het online te doen of om samen ergens met de studenten en eigen laptops te zitten
+------- [X] Ook mogelijkheid om alles geprint te doen, zie instructie X hoe
+--- [X] Stel je kiest voor geboekte inzage:
+------- [X] Moet echt op tijd zijn, hier zijn de deadlines
+------- [X] Je kunt gelukkig ook nog printen
 --------------------------------------------------------------------------------------------------------
 -->
 
@@ -151,13 +155,13 @@ Inzage:
                         <h4 style="text-align: left;"><strong>Applying for TestVision</strong></h4>
                     </div>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 15px; height: auto; background-color: #ffffff;">
-                        <p>If you want to do an online exam with TestVision, notify your <span style="color: #079C97;"><b>programme coordinator</b></span> as early as possible. Programme coordinators are in charge of scheduling the <span style="color: #079C97;"><b>exam or inspection</b></span> and sending a request for TestVision support to ICTO. Thereafter, our team must book in all details according to the roster at least 7 weeks before the start of the exam, retake or inspection.</p>
+                        <p>If you want to do an online exam or inspection with TestVision (using technical support), notify your <span style="color: #079C97;"><b>programme coordinator</b></span> as early as possible. Programme coordinators are in charge of scheduling the <span style="color: #079C97;"><b>exam or inspection</b></span> and sending a request for TestVision support to ICTO. Thereafter, our team must book in all details according to the roster at least 7 weeks before the start of the exam, retake or inspection.</p>
                         <p>The following deadlines apply:
                             <ul>
-                                <li>Exams in block 1 --- July, 29 (2022)</li>
-                                <li>Exams in block 2+3 --- September, 23 (2022)</li>
-                                <li>Exams in block 4 --- December, 30 (2022)</li>
-                                <li>Exams in block 5+6 --- February, 24 (2023)</li>
+                                <li>Exams or inspections in block 1 --- July, 29 (2022)</li>
+                                <li>Exams or inspections in block 2+3 --- September, 23 (2022)</li>
+                                <li>Exams or inspections in block 4 --- December, 30 (2022)</li>
+                                <li>Exams or inspections in block 5+6 --- February, 24 (2023)</li>
                             </ul>
                         </p>
                     </div>
@@ -231,7 +235,7 @@ Inzage:
 
 
                                 <a id="" class="Button Button--large" style="border-width: 1.5px; border-color: #079C97; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page">
-                                    <h5><span style="font-size: 14pt; color: #000000;">View instructions <i class="icon-document"></i></span></h5>
+                                    <h5><span style="font-size: 14pt; color: #000000;">View FAQ <i class="icon-document"></i></span></h5>
                                     <span style="font-size: 10pt; color: #34495e;"><em>What can you expect from the online exam at location</em></span>
                                 </a>
 
