CCSci Foundation update

--- a/CCSi/Homepage_FOUNDATION.html
+++ b/CCSi/Homepage_FOUNDATION.html
@@ -1,44 +1,4 @@
-
-
-<!-- Banner met SSCci titel
-<p><img src="https://canvas.uva.nl/courses/32823/files/7158649/preview" alt="CCSci_banner_1.png" /></p>-->
-
-<!-- Banner drieluik foto
-<p><img src="https://canvas.uva.nl/courses/32823/files/7158660/preview" alt="CCSci_banner_2.png" /></p>-->
-
-<!-- Banner new design
-<p><img src="https://canvas.uva.nl/courses/32823/files/7162303/preview" alt="CSSci (3).png" /></p>-->
-
-<!-- new design2
-<p><img src="https://canvas.uva.nl/courses/32823/files/7162338/preview" alt="CSSci (8).png" /></p>-->
-
-<p><img src="https://canvas.uva.nl/courses/32823/files/7162344/preview" alt="CSSci (9).png" /></p>
-
-<!-- menu bar
-<div class="grid-row">
-    <div class="col-xs-12 col-md-20">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
-                <a class="btn Button" style="margin: 5px;" href=""><i class="icon-home"></i>
-                    <span>&nbsp;Home</span>
-                </a>
-                <a class="btn Button" style="margin: 5px;" href="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i>
-                    <span>&nbsp;A-Z</span>
-                </a>
-                <a class="btn Button" style="margin: 5px;" href="" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
-                <a class="btn Button" style="margin: 5px;" href="" data-api-returntype="Page"><span style="color: #EF5625;"><i class="icon-info"></i><strong>&nbsp;Final Grades menu</strong></span></a>
-                <a class="btn Button" style="margin: 5px;" href="" data-api-returntype="Page"><span style="color: #EF5625;"><i class="icon-info"></i><strong>&nbsp;Digital exams</strong></span></a>
-            </div>
-        </div>
-    </div>
-</div>
--->
-
-
-<!-- Alternative blockquote: titel cursus verkorten naar "FOUNDATION" en volledige titel onder banner weergeven
-<blockquote style="padding-top: 10px; padding-bottom: 10px; font-color: #8fa674;">
-        <span style="font-size: 20px; font-color; #8fa674;">FOUNDATION: Appreciating the complexity of social challenges</span>
-</blockquote>-->
+<p><img src="https://canvas.uva.nl/courses/32823/files/7285330/preview" alt="CSSci (12).png" /></p>
 
 <!-- Tab vakjes (aanklikbare menu) -->
 <h3 style="margin: 5px; margin-bottom: 15px; color: #1e1e1e;"><b>FOUNDATION: Appreciating the complexity of social challenges</b></h3>
@@ -54,18 +14,10 @@
         <li>
             <a href="#Modules" style="background-color: #ffffff;">
                 <div class="content-box" style="margin: 5px; height: 35px; border: #000000;">
-                    <span style="font-size: 13pt;">Learning modules</span>
+                    <span style="font-size: 13pt;">Weekly modules</span>
                 </div>
             </a>
         </li>
-        <!-- Contact pagina komt nog
-        <li>
-            <a href="#tab-2" style="background-color: #ffffff;">
-                <div class="content-box" style="margin: 5px; height: 35px; border: #000000;">
-                    <span style="font-size: 13pt;">Contact details</span>
-                </div>
-            </a>
-        </li>-->
     </ul>
 
     <div id="About" style="background-color: #ffffff; height: auto; padding-left: 30px; padding-top: 30px; padding-bottom: 50px;">
@@ -73,9 +25,9 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can refer to our course manual for information about learning objectives, course requirements, assignment deadlines, and so forth. Note: This course manual may be updated during the course. Updates will be communicated via Canvas as well.</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://rooster.uva.nl/schedule">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>More information will follow soon</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>You can view your weekly schedule via rooster.uva.nl. if you have downloaded or printed this information, please be aware that times, dates and locations may be subject to change and you should regularly check your online timetable.</em></span>
         </a>
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Practical matters</span></h5>
@@ -86,7 +38,6 @@
             <span style="font-size: 10pt; color: #124240;"><em>More information will follow soon</em></span>
         </a>
     </div>
-
 
     <div id="Modules" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
 
@@ -250,18 +201,8 @@
 
     </div>
 
-    <!--
-    <div id="tab-2" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
-
-        <p>Komt nog </p>
-
-        <p>&nbsp;</p>
-    </div>-->
-
 </div>
-<!--
-<p><img src="https://canvas.uva.nl/courses/32823/files/7162276/preview" alt="CSSci (2).png" /></p>
--->
+
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
