--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -37,8 +37,8 @@ MASTERPLAN DIGITAAL TOETSEN
 ------- [_] Final check (+ waaronder: tentamen moet op synchroon staan, how to preview the exam)
 ------- [_] Twijfel? NEEM CONTACT OP!!!##
 --------------------------------------------------------------------------------------------------------
-[X] FAQ moment van toets:
---- Is KLAAR :-D
+[_] FAQ moment van toets:
+--- [_] Anchor ID iets hoger plaatsen per item zodat tekstvakje iets lager zit in scherm
 --------------------------------------------------------------------------------------------------------
 [_] Assessment:
 --- [_] Beoordelen (mini toevoeging ergens aan de zijkant/"can't see this menu achtig"-> Geen toegang? Beoordelaars doorgeven per mail aan icto-csw@uva.nl)
@@ -206,7 +206,7 @@ MASTERPLAN DIGITAAL TOETSEN
 
                                 <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
-                                    <h4><span style="color: #0645ad; font-size: 14pt;"><strong><em>Exam settings</em></strong></span></h4>
+                                    <h4><span style="color: #0645ad; font-size: 14pt;"><em>Exam settings</em></span></h4>
                                     <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>We make a <strong>copy of your previous questions and test</strong> (4 weeks in advance).</em></span></span></p>
                                 </div>
 
@@ -229,7 +229,7 @@ MASTERPLAN DIGITAAL TOETSEN
 
                                 <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
-                                    <h4><span style="color: #0645ad; font-size: 14pt;"><strong><em>Moment of examination</em></strong></span></h4>
+                                    <h4><span style="color: #0645ad; font-size: 14pt;"><em>Moment of examination</em></span></h4>
                                     <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>We've listed down the most <strong>Frequently Asked Questions</strong> by teachers.</em></span></span></p>
                                 </div>
 
@@ -252,7 +252,7 @@ MASTERPLAN DIGITAAL TOETSEN
 
                                 <!-- Titel -->
                                 <div class="content-box pad-box-mini border border-b">
-                                    <h4><span style="color: #0645ad; font-size: 14pt;"><strong><em>Assessment and grades</em></strong></span></h4>
+                                    <h4><span style="color: #0645ad; font-size: 14pt;"><em>Assessment and grades</em></span></h4>
                                     <p><span style="color: #34495e;"><span style="font-size: 11pt;"><em>How to asses the exam and how to <strong>find grades in Canvas Final Grades</strong>.</em></span></span></p>
                                 </div>
 
@@ -283,7 +283,7 @@ MASTERPLAN DIGITAAL TOETSEN
                 <tbody>
                     <tr>
                         <td style="width: 19.3883%;">
-                            <p style="text-align: center;"><span style="color: #0645ad; font-size: 15pt;"><strong><em>Inspection</em></strong></span></p>
+                            <p style="text-align: center;"><span style="color: #0645ad; font-size: 15pt;"><em>Inspection</em></span></p>
                         </td>
                         <td style="width: 4.404%;">
                             <p><strong>&nbsp;</strong></p>
