--- a/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -102,9 +102,8 @@
     </p>
 
     <!--How to publish changes -->
-    <div id="publishchanges" class="enhanceable_content dialog" style="width:500px">
-    <strong>How to publish changes</strong>
-    <p>text</p>
+    <div id="publishchanges" class="enhanceable_content dialog" style="width: 500px;"><strong>How to publish changes</strong>
+    <p>1. Navigate to the <strong>Test-menu</strong>.<br />2. Click the <img src="https://canvas.uva.nl/courses/8175/files/7210515/preview" alt="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7210515" data-api-returntype="File" /> button next to your test to save any changes you made.</p>
     </div>
 
     <!--How to link questions -->
